[package]
name = "passive_rtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.29.0"
log = "0.4.14"
env_logger = "0.9.0"
clap = "=3.0.14"
anyhow = "1.0.38"
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
rust-crypto = "0.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3